# Python_for_Data_Science-42sp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LEARNING_GUIDE.md  LICENSE  PROMPT.MD  README.md  REVISAO_GERAL.md
.agents/: AGENTS.md
.agents/rules/: 00_global_rules.md  01_42_delivery_contract.md  02_python_norm.md  03_testing_and_peer_eval.md  04_repository_layout.md  05_subject_mapping.md  06_antigravity_workflow.md  README.md
.agents/skills/: README.md
.githooks/: prepare-commit-msg
docs/: README.md
exercises/ex00/: README.md  main.py  notes.md
exercises/ex01/: README.md  main.py  notes.md
exercises/ex02/: README.md  main.py  notes.md
exercises/ex03/: README.md  main.py  notes.md
exercises/ex04/: README.md  main.py  notes.md
exercises/ex05/: README.md  main.py  notes.md
exercises/ex06/: README.md  main.py  notes.md
exercises/ex07/: README.md  main.py  notes.md
exercises/ex08/: README.md  main.py  notes.md
exercises/ex09/: README.md  main.py  notes.md
notes/: README.md
projects/: README.md
python_0_starting/: README.md
python_0_starting/eval/: Projetos Intra Python - 0 - Iniciando a Edição.html
python_0_starting/ex00/: Hello.py  README.md
python_0_starting/ex01/: format_ft_time.py
python_0_starting/ex02/: README.md  (+1 more)
python_0_starting/ex09/: .gitignore  LICENSE  README.md  main.py  notes.md  pyproject.toml  tester.py
python_0_starting/ex09/ft_package/: __init__.py
python_0_starting/ex09/ft_package/src/ft_package/: __init__.py
python_1_array/: README.md
scripts/: install-hooks.sh
tests/: README.md
utils/: README.md
(+57 files in other folders)
