[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A simple Python package"
authors = [{name = "Rogerio Lopes", email = "roglopes@student.42sp.org.br"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
